# jethro

backend/: .env.template  .gcloudignore  .gitignore  README.md  app-amtool-production.yaml  app-amtool-staging.yaml  justfile  pyproject.toml  setup.cfg
backend/jethro/: main.py  settings.py
backend/jethro/depends/: __init__.py
frontend/: .umirc.ts  package.json
frontend/src/: app.ts
frontend/src/constants/: index.ts
